<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/my_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/my_account_text"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="@+id/divider3"
        android:onClick="toMyAccount"/>

    <TextView
        android:id="@+id/my_reports_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_reports_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="27sp"
        android:textColor="#000000"
        android:gravity="center"
        android:onClick="toMyReports"
        />

    <TextView
        android:id="@+id/my_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/my_settings_text"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="@+id/divider1"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        android:onClick="toMySettings"/>

    <TextView
        android:id="@+id/log_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/log_out_text"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        android:onClick="toLoginMenuActivity"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/my_reports_btn"
        app:layout_constraintStart_toStartOf="@+id/my_reports_btn"
        app:layout_constraintTop_toBottomOf="@+id/my_reports_btn" />

    <View
        android:id="@+id/divider2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/my_settings_btn"
        app:layout_constraintStart_toStartOf="@+id/my_settings_btn"
        app:layout_constraintTop_toBottomOf="@+id/my_settings_btn" />

    <View
        android:id="@+id/divider3"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/my_reports_btn"
        app:layout_constraintEnd_toEndOf="@+id/my_reports_btn"
        app:layout_constraintStart_toStartOf="@+id/my_reports_btn" />

    <Button
        android:id="@+id/back_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/ic_baseline_navigate_before_24px"
        android:background="#00000000"
        android:paddingEnd="60dp"
        android:onClick="returnToHomeView"/>

</android.support.constraint.ConstraintLayout>