<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cameraImageButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/camera_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?android:selectableItemBackground"
        android:src="@android:drawable/ic_menu_camera"
        android:fillColor="@color/transparent_btn_white"
        android:scaleType="fitXY" />
    <!--android:background="@android:drawable/ic_menu_camera"-->

    <ImageButton
        android:id="@+id/flashBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/flash_off_btn"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@drawable/ic_round_flash_off_24px" />
    <!--android:background="@drawable/ic_round_flash_off_24px"-->

    <ImageButton
        android:id="@+id/menuBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@drawable/ic_round_menu_24px"
        android:contentDescription="@string/menu_btn"
        android:onClick="toMenu"/>

    <!--app:srcCompat="@drawable/ic_round_menu_24px"-->

    <!--app:srcCompat="@drawable/ic_round_flash_off_24px"-->


    <!--app:srcCompat="@android:drawable/ic_menu_camera"-->

</android.support.constraint.ConstraintLayout>