<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/landmarkIntroLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_landmark_solid"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/CaptureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/capture_text_view"
        android:textColor="@color/transparent_btn_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/PIRTextView"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="@+id/PIRTextView"
        app:layout_constraintTop_toBottomOf="@+id/PIRDescriptionTextView" />

    <TextView
        android:id="@+id/DescribeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/describe_text_view"
        app:layout_constraintEnd_toEndOf="@+id/CaptureTextView"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/CaptureTextView"
        app:layout_constraintTop_toBottomOf="@+id/CaptureTextView"
        android:textColor="@color/transparent_btn_white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ReportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/report_text_view"
        app:layout_constraintEnd_toEndOf="@+id/DescribeTextView"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/DescribeTextView"
        app:layout_constraintTop_toBottomOf="@+id/DescribeTextView"
        android:textColor="@color/transparent_btn_white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/PIRTextView"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="PIR"
        android:textColor="@color/transparent_btn_white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/landmarkIntroLogo"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/landmarkIntroLogo"
        app:layout_constraintTop_toBottomOf="@+id/landmarkIntroLogo"
        android:gravity="center"/>

    <TextView
        android:id="@+id/PIRDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/PIR_description"
        android:textColor="@color/transparent_btn_white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/PIRTextView"
        app:layout_constraintStart_toStartOf="@+id/PIRTextView"
        app:layout_constraintTop_toBottomOf="@+id/PIRTextView" />


</android.support.constraint.ConstraintLayout>