<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_baseline_navigate_before_24px"
        android:paddingEnd="60dp"
        android:text="@string/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="returnToMenu"/>

    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_phone_number_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/current_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/current_phone_number_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:inputType="phone"
        android:numeric="integer"
        android:phoneNumber="true"
        android:text="123456789"
        android:textColor="#80000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/current_phone_number_txtview"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/current_phone_number_txtview"
        app:layout_constraintTop_toBottomOf="@+id/current_phone_number_txtview"
        android:gravity="center"/>

    <EditText
        android:id="@+id/current_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="********"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        android:gravity="center"
        android:textColor="#80000000"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/current_password_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/current_password_txtview"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/current_password_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/current_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/current_password_edit_text" />

    <View
        android:id="@+id/divider4"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/current_password_txtview"
        app:layout_constraintEnd_toEndOf="@+id/current_password_txtview"
        app:layout_constraintStart_toStartOf="@+id/current_password_txtview" />

    <EditText
        android:id="@+id/current_email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="exampleEmail@gmail.com"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/divider4"
        android:gravity="center"
        android:textColor="#80000000"
        android:textSize="17sp"
        android:autofillHints="email"/>

    <TextView
        android:id="@+id/current_email_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/current_email"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/current_email_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/current_email_edit_text"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/current_email_edit_text" />

</android.support.constraint.ConstraintLayout>